IE bugfix: Featured Ep heading line wrap, image cut off

--- a/simpleplex/public/styles/podcasts.css
+++ b/simpleplex/public/styles/podcasts.css
@@ -26,8 +26,6 @@
 	margin-right: 8px;
 }
 #featured-ep .grid2-link {
-	width: 900px;
-	height: 1.25em;
 	display: block;
 	text-decoration: none;
 }
